--- a/frontend/src/pages/admin/AdminSettingsPage.module.css
+++ b/frontend/src/pages/admin/AdminSettingsPage.module.css
@@ -25,7 +25,7 @@
 
 .admins {
     max-height: 150px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .admin {
